[metadata]
name = emrspawner
version = 0.0.1
author = Aditya Agarwal
author_email = adityag2511@gmail.com
description = EMR Spawner for jupyterhub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vintageplayer/emrspawner
project_urls =
    Bug Tracker = https://github.com/vintageplayer/emrspawner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src